k8s-do/heritageflix-churches/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritageflix-churches
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: heritageflix-churches
